src/quickdialogs/quickdialogsquickimpl/qquickfiledialogimpl.cpp
@@ -238,12 +238,33 @@ void QQuickFileDialogImplPrivate::handleClick(QQuickAbstractButton *button)
             // Don't call accept(), because selecting a folder != accepting the dialog.
         } else {
             // Otherwise it's a file, so select it and close the dialog.
-            q->setSelectedFile(selectedFile);
-            q->accept();
-            QQuickDialogPrivate::handleClick(button);
-            emit q->fileSelected(selectedFile);
+
+            lastButtonClicked = button;
+
+            // Unless it already exists...
+            const bool dontConfirmOverride = q->options()->testOption(QFileDialogOptions::DontConfirmOverwrite);
+            const bool isSaveMode = q->options()->fileMode() == QFileDialogOptions::AnyFile;
+            if (QQuickFileDialogImplAttached *attached = attachedOrWarn();
+                attached && fileInfo.exists() && isSaveMode && !dontConfirmOverride) {
+                QQuickDialog *confirmationDialog = attached->overwriteConfirmationDialog();
+                confirmationDialog->open();
+                static_cast<QQuickDialogButtonBox *>(confirmationDialog->footer())->standardButton(QPlatformDialogHelper::Yes)
+                    ->forceActiveFocus(Qt::PopupFocusReason);
+            } else {
+                selectFile();
+            }
         }
     }
+}
+
+void QQuickFileDialogImplPrivate::selectFile()
+{
+    Q_Q(QQuickFileDialogImpl);
+    Q_ASSERT(lastButtonClicked);
+    q->setSelectedFile(selectedFile);
+    q->accept();
+    QQuickDialogPrivate::handleClick(lastButtonClicked);
+    emit q->fileSelected(selectedFile);
 }
 
 QQuickFileDialogImpl::QQuickFileDialogImpl(QObject *parent)
@@ -471,6 +492,11 @@ void QQuickFileDialogImpl::setFileName(const QString &fileName)
         return;
 
     setSelectedFile(QUrl(currentFolder().path() + u'/' + fileName));
+}
+
+QString QQuickFileDialogImpl::currentFolderName() const
+{
+    return QDir(currentFolder().toLocalFile()).dirName();
 }
 
 void QQuickFileDialogImpl::componentComplete()
@@ -769,6 +795,32 @@ void QQuickFileDialogImplAttached::setFileNameTextField(QQuickTextField *fileNam
             d, &QQuickFileDialogImplAttachedPrivate::fileNameEditedByUser);
     }
     emit fileNameTextFieldChanged();
+}
+
+QQuickDialog *QQuickFileDialogImplAttached::overwriteConfirmationDialog() const
+{
+    Q_D(const QQuickFileDialogImplAttached);
+    return d->overwriteConfirmationDialog;
+}
+
+void QQuickFileDialogImplAttached::setOverwriteConfirmationDialog(QQuickDialog *dialog)
+{
+    Q_D(QQuickFileDialogImplAttached);
+    if (dialog == d->overwriteConfirmationDialog)
+        return;
+
+    QQuickFileDialogImpl *fileDialogImpl = qobject_cast<QQuickFileDialogImpl*>(parent());
+    if (d->overwriteConfirmationDialog && fileDialogImpl)
+        QObjectPrivate::disconnect(d->overwriteConfirmationDialog, &QQuickDialog::accepted,
+            QQuickFileDialogImplPrivate::get(fileDialogImpl),  &QQuickFileDialogImplPrivate::selectFile);
+
+    d->overwriteConfirmationDialog = dialog;
+
+    if (d->overwriteConfirmationDialog && fileDialogImpl)
+        QObjectPrivate::connect(d->overwriteConfirmationDialog, &QQuickDialog::accepted,
+            QQuickFileDialogImplPrivate::get(fileDialogImpl), &QQuickFileDialogImplPrivate::selectFile, Qt::QueuedConnection);
+
+    emit overwriteConfirmationDialogChanged();
 }
 
 QT_END_NAMESPACE
